# CPU_GPU_project

./: .LDBC-GPU-csr.sh.swp  .LDBC-GPU-gpma.sh.swp  .gitignore  CMakeLists.txt  CPU_BFS.h  CPU_Community_Detection.h  CPU_PageRank.h  CPU_connected_components.h  CPU_shortest_paths.h  GPU_BFS.cu  GPU_BFS.cuh  GPU_Community_Detection.cu  GPU_Community_Detection.cuh  GPU_PageRank.cu  GPU_PageRank.cuh  GPU_shortest_path.cu  LDBC-CPU.sh  LDBC-GPU-adj.sh  LDBC-GPU-csr.sh  LDBC-GPU-gpma.sh  LDBC-GPU.sh  README.md  Union-Find.cu  Union-Find.cuh  Workfront-Sweep.cu  Workfront-Sweep.cuh  cpu-test.sh  example_graph.txt  gpu-test.sh  test.cpp  test.sh  test_CPU.h  test_GPU.h
LDBC_test_python/: README.md
LDBC_test_python/arangodb_py/: bash.sh  initial.config  run_all.py  test_graph_list.trace
LDBC_test_python/arangodb_py/titles/: title_e_unweighted.txt  title_e_unweighted_reverse.txt  title_e_weighted.txt  title_e_weighted_reverse.txt  title_v.txt
LDBC_test_python/neo4j_py/: initial.config  run_all.py  test_graph_list.trace
LDBC_test_python/neo4j_py/titles/: title_e_unweighted.txt  title_e_unweighted_reverse.txt  title_e_weighted.txt  title_e_weighted_reverse.txt  title_v.txt
Test-Framework-for-LDBC/: CMakeLists.txt  README.md
Test-Framework-for-LDBC/CPU/: CMakeLists.txt  CPU_BFS.hpp  CPU_connected_components.hpp  README.md  test-cpu.sh  test_cpu.cpp
Test-Framework-for-LDBC/CPU/include/: UserInfo.hpp  checker.hpp  checkerLDBC.hpp  ldbc.hpp  resultVSldbc.hpp
Test-Framework-for-LDBC/CPU/include/graph_structure/: graph_structure.hpp
Test-Framework-for-LDBC/CPU/src/: CPU_BFS.hpp  CPU_Community_Detection.hpp  CPU_Community_Detection_update.hpp  CPU_PageRank.hpp  CPU_connected_components.hpp  CPU_shortest_paths.hpp  test_cpu.cpp
Test-Framework-for-LDBC/GPU_CSR/: CMakeLists.txt  README.md
Test-Framework-for-LDBC/GPU_CSR/header/: GPU_BFS.cuh  GPU_Community_Detection.cuh  GPU_PageRank.cuh  GPU_connected_components.cuh  GPU_shortest_paths.cuh
Test-Framework-for-LDBC/GPU_CSR/include/: GPU_BFS.cuh  GPU_Community_Detection.cuh  GPU_PageRank.cuh  GPU_connected_components.cuh  GPU_shortest_paths.cuh  checker.hpp  checkerLDBC.hpp  csr_graph.hpp  ldbc.hpp  resultVSldbc.hpp
Test-Framework-for-LDBC/GPU_CSR/include/graph_structure/: graph_structure.hpp
Test-Framework-for-LDBC/GPU_CSR/src/: CD.cu  GPU_BFS.cu  GPU_Community_Detection.cu  GPU_PageRank.cu  GPU_connected_components.cu  GPU_shortest_paths.cu  test.cpp  test_gpu.cpp
Test-Framework-for-LDBC/Release/: CMakeLists.txt  README.md
Test-Framework-for-LDBC/Release/include/: checker.hpp
Test-Framework-for-LDBC/Release/include/graph_structure/: graph_structure.hpp
Test-Framework-for-LDBC/Release/include_cpu/: CPU_Community_Detection.hpp  CPU_PageRank.hpp  CPU_shortest_paths.hpp
Test-Framework-for-LDBC/Release/include_gpu/: GPU_Community_Detection.cuh  GPU_PageRank.cuh  GPU_shortest_paths.cuh  csr_graph.hpp
Test-Framework-for-LDBC/Release/src_cpu/: test_cpu.cpp
Test-Framework-for-LDBC/Release/src_gpu/: GPU_BFS.cu  GPU_Community_Detection.cu  GPU_PageRank.cu  GPU_connected_components.cu  GPU_shortest_paths.cu  test_gpu.cpp
Test-Framework-for-LDBC/include/: CPUPR.hpp  CPU_BFS.hpp  CPU_Community_Detection.hpp  CPU_Community_Detection_update.hpp  CPU_PageRank.hpp  CPU_PageRank_update.hpp  CPU_PageRank_update2.hpp  CPU_connected_components.hpp  CPU_shortest_paths.hpp  GPU_BFS.cuh  GPU_Community_Detection.cuh  GPU_PageRank.cuh  GPU_connected_components.cuh  GPU_shortest_paths.cuh  ThreadPool.h  Workfront-Sweep.cuh  cdlp_cpu.hpp  checker.hpp  checker_cpu.hpp  checker_gpu.hpp
Test-Framework-for-LDBC/include/graph_structure/: csr_graph.hpp  graph_structure.hpp
Test-Framework-for-LDBC/src/: GPU_BFS.cu  GPU_Community_Detection.cu  GPU_PageRank.cu  GPU_shortest_paths.cu  Union-Find.cu  Workfront-Sweep.cu  test.cpp
graph_structure/: binary_save_read_vector_of_vectors.h  graph_structure.h  parse_string.h  sorted_vector_binary_operations.h
include/CPU_adj_list/: CPU_adj_list.hpp  ThreadPool.h  binary_save_read_vector_of_vectors.hpp  sorted_vector_binary_operations.hpp
include/CPU_adj_list/algo/: CPU_BFS.hpp  CPU_connected_components.hpp
include/CPU_adj_list/algorithm/: CPU_BFS.hpp  CPU_BFS_pre.hpp  CPU_Community_Detection.hpp  CPU_PageRank.hpp  CPU_connected_components.hpp  CPU_shortest_paths.hpp  CPU_sssp_pre.hpp
include/GPU_adj_list/: GPU_adj.hpp  GPU_vector.cuh  binary_vector.cuh
include/GPU_adj_list/algorithm/: GPU_BFS_adj.cuh  GPU_CDLP_adj.cuh  GPU_PR_adj.cuh  GPU_PageRank_adj.cuh  GPU_SSSP_adj.cuh  GPU_WCC_adj.cuh
include/GPU_csr/: GPU_csr.hpp  GPU_vector.cuh  binary_vector.cuh
include/GPU_csr/algo/: GPU_BFS.cuh  GPU_Community_Detection.cu  GPU_Community_Detection.cuh  GPU_PageRank.cu  GPU_PageRank.cuh  GPU_connected_components.cuh
include/GPU_csr/algorithm/: GPU_BFS.cuh  GPU_BFS_csr.cuh  GPU_BFS_pre.cuh  GPU_BFS_pre_csr.cuh  GPU_CDLP_csr.cuh  GPU_Community_Detection.cuh  GPU_PR_csr.cuh  GPU_PageRank.cuh  GPU_SSSP_csr.cuh  GPU_SSSP_pre_csr.cuh  GPU_WCC_csr.cuh  GPU_connected_components.cuh  GPU_shortest_paths.cuh  GPU_sssp_pre.cuh  WCC.cuh
include/GPU_gpma/: GPU_gpma.hpp
include/GPU_gpma/algorithm/: GPU_BFS_gpma.cuh  GPU_BFS_gpma_optimized.cuh  GPU_CDLP_gpma.cuh  GPU_CDLP_gpma_optimized.cuh  GPU_PR_gpma.cuh  GPU_PR_gpma_optimized.cuh  GPU_SSSP_gpma.cuh  GPU_SSSP_gpma_optimized.cuh  GPU_WCC_gpma.cuh  GPU_WCC_gpma_optimized.cuh
include/LDBC/: checker.hpp  ldbc.hpp
src/CPU_adj_list/: CPU_example.cpp
src/GPU_adj_list/: GPU_adj_example.cu
src/GPU_csr/: GPU_csr_example.cu  GPU_example.cu
src/GPU_gpma/: GPU_gpma_example.cu
src/LDBC/: LDBC_CPU_adj_list.cpp  LDBC_GPU_adj.cu  LDBC_GPU_csr.cu  LDBC_GPU_gpma.cu
